<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:paddingVertical="@dimen/space16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvProductName"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Морковь" />

        <TextView
            android:id="@+id/tvProductCalculation1"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            tools:text="1 x 55.66 = 600" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCalculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewAsEditView"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:layout_marginBottom="@dimen/space16"
        android:gravity="right"/>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <Button
                android:id="@+id/btnNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_1"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_2"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_3"
                app:backgroundTint="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_4"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_5"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_6"
                app:backgroundTint="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_7"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_8"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_9"
                app:backgroundTint="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnComma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_decimal_point"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnNum0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_0"
                app:backgroundTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:text="@string/num_clear"
                app:backgroundTint="@android:color/darker_gray" />
        </TableRow>

    </TableLayout>


</LinearLayout>